# src/routes/send/index.js
@@ -2,6 +2,7 @@ import express from 'express';
 
 import getSendBySend from './getSendBySend';
 import getSendByRecieve from './getSendByRecieve';
+import getSendById from './getSendById';
 import postSend from './postSend';
 import putSend from './putSend';
 import deleteSend from './deleteSend';
@@ -12,6 +13,7 @@ const router = express.Router();
 
 router.get('/send', Util.isLoggedIn, getSendBySend);
 router.get('/recieve', Util.isLoggedIn, getSendByRecieve);
+router.get('/recieve/:id', Util.isLoggedIn, getSendById);
 router.post('/', Util.isLoggedIn, postSend);
 router.put('/', Util.isLoggedIn, putSend);
 router.delete('/:id', Util.isLoggedIn, deleteSend);
