# swagger.json
@@ -2564,6 +2564,87 @@
           }
         }
       }
+    },
+    "/send/recieve/{id}": {
+      "get": {
+        "tags": ["Send"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "x-access-token",
+            "in": "header",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number"
+                },
+                "send_id": {
+                  "type": "number"
+                },
+                "recieve_id": {
+                  "type": "number"
+                },
+                "contents": {
+                  "type": "string"
+                },
+                "lat": {
+                  "type": "number"
+                },
+                "lng": {
+                  "type": "number"
+                },
+                "readed": {
+                  "type": "boolean"
+                },
+                "removed": {
+                  "type": "boolean"
+                },
+                "sended_at": {
+                  "type": "string"
+                },
+                "readed_at": {
+                  "type": "string"
+                },
+                "removed_at": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "schema": {
+              "type": "string"
+            }
+          },
+          "401": {
+            "schema": {
+              "type": "string"
+            }
+          },
+          "404": {
+            "schema": {
+              "type": "string"
+            }
+          },
+          "500": {
+            "schema": {
+              "type": "string"
+            }
+          }
+        }
+      }
     }
   }
 }
